# takopi-claude-platform-aws

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/takopi_claude_platform_aws/: __init__.py  backend.py  clients.py  config.py  mcp.py  prompts.py  runner.py  sessions.py  tools.py
tests/: test_backend.py  test_config.py  test_runner.py  test_sessions.py
